--- a/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
+++ b/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>EntrepriseDeDistribution</RootNamespace>
     <AssemblyName>EntrepriseDeDistribution</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,8 +39,15 @@
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -54,29 +62,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChercheDate.cs">
+    <Compile Include="ChercheDate_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ChercheDate.Designer.cs">
-      <DependentUpon>ChercheDate.cs</DependentUpon>
+    <Compile Include="ChercheDate_F.Designer.cs">
+      <DependentUpon>ChercheDate_F.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChercherEditeur.cs">
+    <Compile Include="ChercherEditeur_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ChercherEditeur.Designer.cs">
-      <DependentUpon>ChercherEditeur.cs</DependentUpon>
+    <Compile Include="ChercherEditeur_F.Designer.cs">
+      <DependentUpon>ChercherEditeur_F.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Depot.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Ecrivain.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Editeur.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Editeur_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Editeur.Designer.cs">
-      <DependentUpon>Editeur.cs</DependentUpon>
+    <Compile Include="Editeur_F.Designer.cs">
+      <DependentUpon>Editeur_F.cs</DependentUpon>
     </Compile>
     <Compile Include="Edition.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Edition_F.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Edition.Designer.cs">
-      <DependentUpon>Edition.cs</DependentUpon>
+    <Compile Include="Edition_F.Designer.cs">
+      <DependentUpon>Edition_F.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -84,46 +104,76 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Graphe.cs">
+    <Compile Include="Graphe_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Graphe.Designer.cs">
-      <DependentUpon>Graphe.cs</DependentUpon>
+    <Compile Include="Graphe_F.Designer.cs">
+      <DependentUpon>Graphe_F.cs</DependentUpon>
     </Compile>
     <Compile Include="Livre.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Livre_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Livre.Designer.cs">
-      <DependentUpon>Livre.cs</DependentUpon>
+    <Compile Include="Livre_F.Designer.cs">
+      <DependentUpon>Livre_F.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Report.cs">
+    <Compile Include="Region.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Report_F.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Report.Designer.cs">
-      <DependentUpon>Report.cs</DependentUpon>
+    <Compile Include="Report_F.Designer.cs">
+      <DependentUpon>Report_F.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ChercheDate.resx">
-      <DependentUpon>ChercheDate.cs</DependentUpon>
+    <Compile Include="Stock.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Theme.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="V_Recherche.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ChercheDate_F.resx">
+      <DependentUpon>ChercheDate_F.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChercherEditeur.resx">
-      <DependentUpon>ChercherEditeur.cs</DependentUpon>
+    <EmbeddedResource Include="ChercherEditeur_F.resx">
+      <DependentUpon>ChercherEditeur_F.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Editeur.resx">
-      <DependentUpon>Editeur.cs</DependentUpon>
+    <EmbeddedResource Include="Editeur_F.resx">
+      <DependentUpon>Editeur_F.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Edition.resx">
-      <DependentUpon>Edition.cs</DependentUpon>
+    <EmbeddedResource Include="Edition_F.resx">
+      <DependentUpon>Edition_F.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Graphe.resx">
-      <DependentUpon>Graphe.cs</DependentUpon>
+    <EmbeddedResource Include="Graphe_F.resx">
+      <DependentUpon>Graphe_F.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Livre.resx">
-      <DependentUpon>Livre.cs</DependentUpon>
+    <EmbeddedResource Include="Livre_F.resx">
+      <DependentUpon>Livre_F.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,10 +183,19 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Report.resx">
-      <DependentUpon>Report.cs</DependentUpon>
+    <EmbeddedResource Include="Report_F.resx">
+      <DependentUpon>Report_F.cs</DependentUpon>
     </EmbeddedResource>
+    <EntityDeploy Include="Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -149,6 +208,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
