--- a/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
+++ b/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
@@ -151,6 +151,9 @@
     <Compile Include="Theme.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="V_graphe.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="V_Recherche.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
