--- a/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
+++ b/EntrepriseDeDistribution/EntrepriseDeDistribution.csproj
@@ -74,6 +74,12 @@
     <Compile Include="ChercherEditeur_F.Designer.cs">
       <DependentUpon>ChercherEditeur_F.cs</DependentUpon>
     </Compile>
+    <Compile Include="crpt.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>crpt.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Depot.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -163,6 +169,10 @@
     <EmbeddedResource Include="ChercherEditeur_F.resx">
       <DependentUpon>ChercherEditeur_F.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="crpt.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crpt.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Editeur_F.resx">
       <DependentUpon>Editeur_F.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +236,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
